--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ dj-rest-auth==6.0.0
 Django==5.1.2
 django-allauth==65.1.0
 django-cors-headers==4.5.0
+django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-nested-routers==0.94.1
 drf-spectacular==0.27.2
 drf-yasg==1.21.8
 idna==3.10
